fixed product card alignment issues

--- a/frontend/src/styles/ProductCard.css
+++ b/frontend/src/styles/ProductCard.css
@@ -118,7 +118,7 @@
 
 .product-card-retailer-logo {
   position: absolute;
-  bottom: -0.3rem;
+  bottom: 0rem;
   right: 0.2rem;
   width: 40px;
   height: 35px;
